[project]
name = "retina"
version = "0.1.0"
description = "RETINA — Review of Entitlements, Tokens, Identities and Networked Access"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "sqlalchemy==2.0.36",
    "cryptography==44.0.0",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "apscheduler>=3.10,<4",
]
